made calc & button temp color

--- a/calculator.html
+++ b/calculator.html
@@ -21,10 +21,10 @@
         <br>
         <div class = "row">
             <div class="col-md text-center">
-                <button class="btn btn-primary" id="+" onClick="add();">&plus;</button>
-                <button class="btn btn-primary" id="-" onClick="subtract();">&minus;</button>
-                <button class="btn btn-primary" id="x" onClick="multiply();">&times;</button>
-                <button class="btn btn-primary" id="" onClick="divide();">&divide;</button>
+                <button class="btn btn-primary" id="add" onClick="add();">&plus;</button>
+                <button class="btn btn-primary" id="sub" onClick="subtract();">&minus;</button>
+                <button class="btn btn-primary" id="mult" onClick="multiply();">&times;</button>
+                <button class="btn btn-primary" id="div" onClick="divide();">&divide;</button>
             </div>
 
             <div class="col-md">
@@ -39,8 +39,9 @@
         <br>
         <div class="row">
             <div class="col-md text-center">
+                <h3 class="title">Operation history:</h3>
                 <div id="history">
-                    <h3 class="title">Operation history:</h3>
+                    
                 </div>
             </div>
         </div>
